--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.android.support:design:27.1.1'
+
+    implementation "com.opencsv:opencsv:4.5"
 }
