--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -30,4 +31,5 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 
     implementation "com.opencsv:opencsv:4.5"
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
