Criado o semi modulo de clandestinos dentro do modulo de LP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.dudukling.enelz">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -24,7 +23,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-
+        <activity android:name=".clandestinoActivity"></activity>
+        <activity android:name=".clandestinoFormActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -38,7 +38,7 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".ligProvActivity" />
-        <activity android:name=".form_ligProvActivity" />
+        <activity android:name=".ligProvFormActivity" />
         <activity android:name=".ligProvAlbumActivity" />
         <activity android:name=".ligProvImageActivity" />
         <activity
