--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
 
     implementation "com.opencsv:opencsv:4.5"
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
