--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".LigProvFormLevCargaActivity"></activity>
         <activity android:name=".clandestinoActivity" />
         <activity android:name=".clandestinoFormActivity" />
         <!--
