--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.dudukling.enelz"
+        applicationId "com.dudukling.energyup"
         minSdkVersion 14
         targetSdkVersion 27
         versionCode 1
