--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,22 +4,24 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.dudukling.energyup"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
-
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
     }
+    productFlavors {
+    }
 }
 
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
@@ -29,8 +31,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.android.support:design:27.1.1'
-
-    implementation "com.opencsv:opencsv:4.5"
+    implementation 'com.opencsv:opencsv:4.5'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'ru.egslava:MaskedEditText:1.0.5'
 }
