--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'ru.egslava:MaskedEditText:1.0.5'
+    implementation 'com.android.volley:volley:1.1.1'
 }
