--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -23,7 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".fiscalizacaoClandestinoAlbumActivity"></activity>
+        <activity android:name=".fiscalizacaoClandestinoAlbumActivity"/>
         <activity android:name=".fiscalizacaoClandestinoFormActivity" />
         <activity android:name=".fiscalizacaoClandestinoActivity" />
         <activity android:name=".fiscalizacaoMenuActivity" />
