--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,17 +25,17 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-        <activity android:name=".fiscalizacao.fiscalizacaoClandestinoAlbumActivity" android:launchMode="singleTop" />
-        <activity android:name=".fiscalizacao.fiscalizacaoClandestinoFormActivity" android:launchMode="singleTop" />
-        <activity android:name=".fiscalizacao.fiscalizacaoClandestinoActivity" android:launchMode="singleTop" />
-        <activity android:name=".fiscalizacao.fiscalizacaoMenuActivity" android:launchMode="singleTop" />
+        <activity android:name=".fiscalizacao_clandestino.fiscalizacaoClandestinoAlbumActivity" android:launchMode="singleTop" />
+        <activity android:name=".fiscalizacao_clandestino.fiscalizacaoClandestinoFormActivity" android:launchMode="singleTop" />
+        <activity android:name=".fiscalizacao_clandestino.fiscalizacaoClandestinoActivity" android:launchMode="singleTop" />
+        <activity android:name=".fiscalizacao_clandestino.fiscalizacaoMenuActivity" android:launchMode="singleTop" />
         <activity android:name=".faqActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacaoes_provisorias.ligProvLevCargaActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacoes_clandestinas.clandestinoActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacaoes_provisorias.ligProvActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacaoes_provisorias.ligProvFormActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacaoes_provisorias.ligProvAlbumActivity" android:launchMode="singleTop" />
-        <activity android:name=".ligacaoes_provisorias.ligProvImageActivity" android:launchMode="singleTop" />
+        <activity android:name=".imageActivity" android:launchMode="singleTop" />
         <activity android:name=".menuActivity" android:launchMode="singleTop" />
         <activity android:name=".importActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacoes_clandestinas.clandestinoFormActivity" android:launchMode="singleTop" />
