--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,20 +25,20 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-        <activity android:name=".fiscalizacao_clandestino.fiscalizacaoClandestinoAlbumActivity" android:launchMode="singleTop" />
-        <activity android:name=".fiscalizacao_clandestino.fiscalizacaoClandestinoFormActivity" android:launchMode="singleTop" />
-        <activity android:name=".fiscalizacao_clandestino.fiscalizacaoClandestinoActivity" android:launchMode="singleTop" />
-        <activity android:name=".fiscalizacao_clandestino.fiscalizacaoMenuActivity" android:launchMode="singleTop" />
+        <activity android:name=".fiscalizacao_clandestino.fiscaClandAlbumActivity" android:launchMode="singleTop" />
+        <activity android:name=".fiscalizacao_clandestino.fiscaClandFormActivity" android:launchMode="singleTop" />
+        <activity android:name=".fiscalizacao_clandestino.fiscaClandActivity" android:launchMode="singleTop" />
+        <activity android:name=".fiscalizacao_clandestino.fiscaClandMenuActivity" android:launchMode="singleTop" />
         <activity android:name=".faqActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacaoes_provisorias.ligProvLevCargaActivity" android:launchMode="singleTop" />
-        <activity android:name=".ligacoes_clandestinas.clandestinoActivity" android:launchMode="singleTop" />
+        <activity android:name=".ligacoes_clandestinas.ligClandActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacaoes_provisorias.ligProvActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacaoes_provisorias.ligProvFormActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacaoes_provisorias.ligProvAlbumActivity" android:launchMode="singleTop" />
         <activity android:name=".imageActivity" android:launchMode="singleTop" />
         <activity android:name=".menuActivity" android:launchMode="singleTop" />
         <activity android:name=".importActivity" android:launchMode="singleTop" />
-        <activity android:name=".ligacoes_clandestinas.clandestinoFormActivity" android:launchMode="singleTop" />
+        <activity android:name=".ligacoes_clandestinas.ligClandFormActivity" android:launchMode="singleTop" />
         <activity android:name=".ligacaoes_provisorias.ligProvLevCargaFormActivity" android:launchMode="singleTop" />
         <activity
             android:name=".splashActivity"
